{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 102,
  "lineage": "874266dd-0a3d-9cfa-67de-9b51f2bc86e1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/regions/asia-south1/networkEndpointGroups/cloud-run-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-02-21T21:16:39.456-08:00",
            "enable_cdn": false,
            "fingerprint": "qZYgrdHFRto=",
            "generated_id": 7624301861064205144,
            "id": "projects/churn-cloud-project-446615/global/backendServices/backend-service-e16a43db",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-service-e16a43db",
            "port_name": "http",
            "project": "churn-cloud-project-446615",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/global/backendServices/backend-service-e16a43db",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_service.container_service",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "random_id.env_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-21T21:16:18.602-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/churn-cloud-project-446615/global/firewalls/allow-lb-traffic",
            "log_config": [],
            "name": "allow-lb-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/global/networks/main-vpc-asia-south1-e16a43db",
            "priority": 1000,
            "project": "churn-cloud-project-446615",
            "self_link": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/global/firewalls/allow-lb-traffic",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.custom_vpc",
            "random_id.env_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.36.93.240",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-02-21T21:16:06.221-08:00",
            "id": "projects/churn-cloud-project-446615/global/addresses/lb-ip-asia-south1-e16a43db",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "lb-ip-asia-south1-e16a43db",
            "prefix_length": 0,
            "project": "churn-cloud-project-446615",
            "self_link": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/global/addresses/lb-ip-asia-south1-e16a43db"
          },
          "dependencies": [
            "random_id.env_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/churn-cloud-project-446615/global/forwardingRules/forwarding-rule-e16a43db",
            "ip_address": "34.36.93.240",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "forwarding-rule-e16a43db",
            "port_range": "80-80",
            "project": "churn-cloud-project-446615",
            "self_link": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/global/forwardingRules/forwarding-rule-e16a43db",
            "target": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/global/targetHttpProxies/http-proxy-e16a43db"
          },
          "dependencies": [
            "google_cloud_run_service.container_service",
            "google_compute_backend_service.backend",
            "google_compute_global_address.lb_ip",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default",
            "random_id.env_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/churn-cloud-project-446615/global/networks/main-vpc-asia-south1-e16a43db",
            "mtu": 0,
            "name": "main-vpc-asia-south1-e16a43db",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4034005992438293369",
            "project": "churn-cloud-project-446615",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/global/networks/main-vpc-asia-south1-e16a43db"
          },
          "dependencies": [
            "random_id.env_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-21T21:16:21.287-08:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/churn-cloud-project-446615/regions/asia-south1/subnetworks/subnet1-asia-south1-e16a43db",
            "ip_cidr_range": "10.1.0.0/18",
            "name": "subnet1-asia-south1-e16a43db",
            "network": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/global/networks/main-vpc-asia-south1-e16a43db",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "churn-cloud-project-446615",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/regions/asia-south1/subnetworks/subnet1-asia-south1-e16a43db",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.custom_vpc",
            "random_id.env_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-21T21:16:21.114-08:00",
            "gateway_address": "10.1.64.1",
            "id": "projects/churn-cloud-project-446615/regions/asia-south1/subnetworks/subnet2-asia-south1-e16a43db",
            "ip_cidr_range": "10.1.64.0/18",
            "name": "subnet2-asia-south1-e16a43db",
            "network": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/global/networks/main-vpc-asia-south1-e16a43db",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "churn-cloud-project-446615",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/regions/asia-south1/subnetworks/subnet2-asia-south1-e16a43db",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.custom_vpc",
            "random_id.env_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-21T21:17:24.591-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/churn-cloud-project-446615/global/targetHttpProxies/http-proxy-e16a43db",
            "name": "http-proxy-e16a43db",
            "project": "churn-cloud-project-446615",
            "proxy_bind": false,
            "proxy_id": 5487208623716492043,
            "self_link": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/global/targetHttpProxies/http-proxy-e16a43db",
            "url_map": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/global/urlMaps/lb-urlmap-e16a43db"
          },
          "dependencies": [
            "google_cloud_run_service.container_service",
            "google_compute_backend_service.backend",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_compute_url_map.default",
            "random_id.env_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-21T21:17:12.466-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/global/backendServices/backend-service-e16a43db",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "eLQxCK-Lg78=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/churn-cloud-project-446615/global/urlMaps/lb-urlmap-e16a43db",
            "map_id": 1584794264759755575,
            "name": "lb-urlmap-e16a43db",
            "path_matcher": [],
            "project": "churn-cloud-project-446615",
            "self_link": "https://www.googleapis.com/compute/v1/projects/churn-cloud-project-446615/global/urlMaps/lb-urlmap-e16a43db",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_cloud_run_service.container_service",
            "google_compute_backend_service.backend",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "random_id.env_suffix"
          ]
        }
      ]
    }
  ]
}